2006-01-21  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (EXTRA_DIST): Delete EXCEPTION.
	* EXCEPTION: Delete, moved to common/.

2006-01-16  Rick Moseley  <rmoseley@redhat.com>

	* Moved frysk,desktop to ./frysk-gui.

2006-01-16  Rick Moseley  <rmoseley@redhat.com>

	* Added frysk.desktop for startup sequence.

2006-01-05  Andrew Cagney  <cagney@redhat.com>

	* configure.ac (AC_CONFIG_SUBDIRS): Add frysk-gtk.
	* Makefile.am (SUBDIRS): Add frysk-gtk.
	* autogen.sh: Add frysk-gtk.

2005-12-13  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (EXTRA_DIST): For files in common, include
	$(srcdir).  Ensures that wild cards match the correct files.

2005-12-09  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (EXTRA_DIST): Add common/ChangeLog, common/*.m4,
	common/*.sh, and common/m4/*.m4.
	
2005-12-08  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (EXTRA_DIST): Add ommon/m4/ac_find_file.m4, and
	common/m4/ac_get_lib_line.m4.

2005-12-02  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (EXTRA_DIST): Add common/version.in and autogen.sh.

2005-11-28  Andrew Cagney  <cagney@redhat.com>

	* configure.ac (AM_INIT_AUTOMAKE): Add dist-bzip2, and tar-ustar
	options.

	* autogen.sh: Add -f to autoconf.

2005-11-22  Andrew Cagney  <cagney@redhat.com>

	* configure.ac: Move version.in logic to common/version.ac,
	include.
	
	* version.in: Delete, moved to common/
	* configure.ac (FRYSK_VERSION_IN, FRYSK_VERSION): Define, get the
	version from common/version.in.

2005-10-31  Andrew Cagney  <cagney@redhat.com>

	* version.in: New file.
	* configure.ac (VERSION_IN): Define by including version.in.
	(AC_INIT): Set version to VERSION_IN.

2005-10-30  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (upload-javadoc): Tune the rsync options; use
	--checksum instead of --times.

2005-10-27  Andrew Cagney  <cagney@redhat.com>

	* overview.html: Use <em>frysk</em>.
	* Makefile.am (javadoc): Generate both public and private
	documentation.
